istio/istio-demo/3-myapp-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: first-app
  namespace: dev
spec:
  ports:
  - name: http
    port: 8080
  selector:
    app: first-app
